# piqopiqo

./: .gitignore  ACTION_10.md  ACTION_10b.md  AGENTS.md  ANALYSIS.md  Info.plist.template  Makefile  NOTES.md  NOTE_OLD.md  PiqoPiqo.spec  README.md  RECOMMEND.md  REFACTOR.md  WORKITEM_6_SUMMARY.md  app.icns  app_config.env  build.sh  exiftool_fields_sample_g0.json  pyinstaller_build.py  pyinstaller_main.py  pyproject.toml  requirements.txt  svg2icns.sh
.claude/: CLAUDE.md
.claude/skills/: automate_pyside6_and_scrensshots.md  script_pyside6_and_scrensshots.md
.github/: copilot-instructions.md
.github/chatmodes/: beast.agent.md  beast.chatmode.md
.prompts/: Aa_Shortcut_local_to_screen.md  Ba_select_all_quite_slow.md  C_Memory_grows_lag.md  Ca_fullscreen_color.md  D.A.A_Arrange_settings_panel.md  D.A_Settings.md  D_Settings_state.md  Da_Specific_macos.md  Ea.A_Save_icc_thumbnails_assume_default_sRGB.md  G_Flickr_addtional.md  G_Settings_create.md  H.A_Correct_gpx.md  H_gpx2exif.md  I_Flickr_upload.md  J_gpx2exif_remember_last.md  M_Model_sync_2.md  N.A_Predefined_colors.md  N_Generate_color_for_label.md  O.A_Initial_focus.md  O_Settings_add_label_validation.md  P_Manual_lens.md  Q_Base_data_redirect_to_settings.md  Q_Gpx_in_Folder_data.md  R_Formatting_exif_standard.md  S_Flickr_dialog.md  T_Selection_return_from_fullscreen.md  U.A_Fix_context_manager_protocol_error_on_exit.md  U_Error_on_exiting.md  V_Grid_refresh_exit_fullscreen.md  W_Sort_order_keep_for_folder_or_last.md  X_Filter_update_delay_hide_descript_metadata_layou.md  Z_Metadata_panel_moves_if_keyword_has_multiple_lin.md  __plan.md
.prompts/0001_tasks/: 20.2.changes.md
.prompts/A_tasks/: A_Fix_date_read_delay.md  B.A_GUI_lag.md  B_Eject_SD_after_user_OK.md  C_Make_OK_button_active.md  E_Lores_Thumbnails_scale_up.md  F_Settings_correction.md  H.A_Correct_gpx.md  H_gpx2exif.md
.prompts/Ba_tasks/: Ba_select_all_quite_slow.md  D.A.A_Arrange_settings_panel.md  D.A.B_Arrange_settings_panel.md  D.A_Settings.md  Da_Specific_macos.md  Ea_Handle_color_profile_setting_appkit.md  Fa.A_Validate_in_settings_panel.md  (+4 more)
CoreLib/: Cargo.toml  build.rs  cbindgen.toml
CoreLib/src/: core_lib.udl  lib.rs  main.rs
CoreLib/uniffi-bindgen/: Cargo.toml
GuiApp/: .gitignore  Package.swift
data/: bridge_keywords_20251124.txt  exiftool_fields_sample_g1.json  exitool_ex1.json
piqopiqo/: piqopiqo.py  requirements.txt
previous_py_test/: setup.py
prompts/: 10.cache_editable.md  10b.editable.md  11.e.scaling-correct-shortcuts.md  11.f.navigate-correct.md  11b.label.md  11c.zoomlevel.md  11d.kw-filter.md  12.0.sorted.md  12.1.thumbnail.md  12.1.undo.md  12.2.filter.md  12.2.refactor.md  12.queue.md  12a.kw-filter.md  12a.kw.md  12b.kw2.md  12b.kw3.md  12c.cmda.md  13.navigation_grid.md  13.settings.md  13a.burnexif.md  13b.orientation.md  14.details.md  16.packaging.md  20.0.changes.md  20.1.changes.md  20.1.copysd.md  gemini_exiftool.txt  gemini_multiselect.txt  gemini_zoom_fullscreen.txt  ghcp_exifarrange.txt  ghcp_navigate_fullscreen.txt  ghcp_space_full.txt  pre.11.shortcuts.md  pre.12.queue.md  pre.13.navigation_grid.md  pre14.details.md  pre15.upload.md  program.txt  spec.md  (+2 more)
py_test/: README.md  requirements.txt
testqt/: main.py
tests/: test_column_number_selector.py  test_copy_sd.py  test_edit_panel.py  test_exif_panel.py  test_exif_write.py  test_filter_panel_shortcuts.py  test_flickr_upload_albums.py  test_flickr_upload_auth.py  test_flickr_upload_dialogs.py  test_flickr_upload_manager.py  test_flickr_upload_precheck.py  test_flickr_upload_service.py  test_fullscreen_click_gesture.py  test_fullscreen_info_panel.py  test_gpx2exif_actions.py  test_gpx2exif_dialogs.py  test_gpx2exif_service.py  test_gpx2exif_time_shift.py  test_gpx2exif_time_shift_memory.py  test_main_window_open_folder.py  test_main_window_thumbnail_loading.py  test_main_window_workspace_properties.py  test_mandatory_settings_dialog.py  test_manual_lens_tool.py  test_manual_lenses_editor.py  test_metadata_db_folder_metadata.py  test_metadata_db_manual_lens.py  test_metadata_save_workers.py  test_pan_logic.py  test_photo_grid_filter_latency.py  test_photo_grid_scroll_navigation_activity.py  test_photo_grid_selection_refresh.py  test_photo_grid_shortcuts.py  test_photo_model_sync.py  test_settings_panel_dialog.py  test_settings_panel_schema.py  test_settings_state.py  test_shortcuts.py  test_shortcuts_editor.py  test_startup_mandatory_settings.py  (+2 more)
wicowico/: go.mod  main.go  wails.json
(+217 files in other folders)
