[project]
name = "piqopiqo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "click>=8.3.1",
    "coloredlogs>=15.0.1",
    "google-cloud-vision>=3.12.1",
    "gpxpy>=1.6.2",
    "pillow>=12.0.0",
    "pyexiftool>=0.5.6",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyside6>=6.10.1",
    "send2trash>=1.8.0",
    "simplekml>=1.3.6",
    "show-in-file-manager>=1.1.2",
    "watchfiles>=0.21.0",
]

[project.scripts]
piqopiqo = "piqopiqo.__main__:cli"

[tool.uv.sources]
pyqtauto = { path = "/Users/guilhem/Documents/projects/github/pyqtauto" }

# [tool.uv.sources]
# pyqtauto = { git = "https://github.com/gvellut/pyqtauto.git" }

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "taskipy>=1.14.1", "pyinstaller>=6.18.0"]
pyqtauto = ["pyqtauto"]

[tool.taskipy.tasks]
build = "pyinstaller --name 'PiqoPiqo' --windowed --noconfirm --clean --icon='app.icns' --exclude-module=pyqtauto --paths='src' --add-data='app.icns:.' pyinstaller_main.py"
package = "create-dmg --volname 'PiqoPiqo Installer' --volicon 'app.icns' --app-drop-link 600 185 'PiqoPiqo.dmg' 'dist/PiqoPiqo.app'"
