[workspace]
members = ["."]

[package]
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_extras = { version = "0.33", features = ["image", "file", "svg"] }
egui-theme-switch = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
egui-notify = "0.21"
egui-file-dialog = { git = "https://github.com/mq1/egui-file-dialog", branch = "fix-win-i686" }
crossbeam-channel = "0.5"
ureq = { version = "3.1", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = { version = "6.0", optional = true }
anyhow = "1.0"
fs_extra = "1.3"
size = "0.5"
zip = { version = "6.0", default-features = false, features = [
"deflate-flate2-zlib-rs",
] }
quick-xml = { version = "0.38", features = ["serialize"] }
sysinfo = "0.37"
open = "5.3"
tempfile = "3.23"
nod = "2.0.0-alpha.4"
num_cpus = "1.17"
semver = "1.0"
path-slash = "0.2"
hex = "0.4"
sanitize-filename = "0.7.0-beta"
capitalize = "0.3"
eframe = { version = "0.33", default-features = false, features = [
"accesskit",
"default_fonts",
"wgpu",
"persistence"
] }
winit = { version = "0.30.2", default-features = true }
wgpu = { version = "0.20.1", default-features = false, optional = true }
